--- a/web_dynamic/templates/0-hbnb.html
+++ b/web_dynamic/templates/0-hbnb.html
@@ -58,9 +58,12 @@
 	    <div class="price_by_night">${{ place.price_by_night }}</div>
 	  </div>
 	  <div class="information">
-	    <div class="max_guest">{{ place.max_guest }} Guest{% if place.max_guest != 1 %}s{% endif %}</div>
-            <div class="number_rooms">{{ place.number_rooms }} Bedroom{% if place.number_rooms != 1 %}s{% endif %}</div>
-            <div class="number_bathrooms">{{ place.number_bathrooms }} Bathroom{% if place.number_bathrooms != 1 %}s{% endif %}</div>
+		<div class="guest_image"></div>
+	    <div class="max_guest"><p>{{ place.max_guest }} Guest{% if place.max_guest != 1 %}s{% endif %}</p></div>
+        <div class="bed_image"></div>
+		<div class="number_rooms">{{ place.number_rooms }} Bedroom{% if place.number_rooms != 1 %}s{% endif %}</div>
+        <div class="bath_image"></div>
+		<div class="number_bathrooms">{{ place.number_bathrooms }} Bathroom{% if place.number_bathrooms != 1 %}s{% endif %}</div>
 	  </div>
 	  <div class="user">
             <b>Owner:</b> {{ place.user.first_name }} {{ place.user.last_name }}
