--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -22,6 +22,6 @@ header {
     margin-right: 30px;
     background-color: #cccccc;
 }
-.available{
+#api_status.available{
     background-color: #ff545f;
 }
